@@ -175,8 +175,11 @@ plugin.powermail {
 	# cat=plugin.powermail_additionalconfig/plugin_powermail_cat_50/0490; type=boolean; label= Include jQuery and jQuery Tools libraries to header (only for usage without t3jquery)
 	js.toHeader = 0
 
-	# cat=plugin.powermail_additionalconfig/plugin_powermail_cat_50/500; type=boolean; label= Show only one validation error: Show only one validation error at the same time
+	# cat=plugin.powermail_additionalconfig/plugin_powermail_cat_50/0500; type=boolean; label= Show only one validation error: Show only one validation error at the same time
 	js.singleError = 0
+
+	# cat=plugin.powermail_additionalconfig/plugin_powermail_cat_50/0510; type=boolean; label= Automatically scroll to error: Automatically scroll to form element with first validation error
+	js.scrollToError = 1
 
 
 	# cat=plugin.powermail_additionalconfig/plugin_powermail_cat_60/0610; type=text; label= Folder for uploaded files: If you are using min. one upload field in frontend, you can change the folder where the uploaded file is safed
